# httpx-retry

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tox.ini
.github/workflows/: pr.yml
httpx_retry/: __init__.py  transport.py
httpx_retry/strategies/: base.py
src/httpx_retry/: executor.py
src/httpx_retry/policies/: __init__.py  base.py
src/httpx_retry/utils/: __init__.py  time.py
tests/: test_adaptive_retry.py  test_circuit_breaker.py  test_edge_cases.py  test_exponential_backoff.py  test_fibonacci_backoff.py  test_fixed_delay.py  test_immediate_retry.py  test_jitter.py  test_linear_backoff.py  test_retry_policy.py
