[tool.poetry]
name = "httpx-retry"
version = "0.1.0"
description = "Retry middleware for HTTPX"
authors = ["Michael Harris <mharris@definite.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
respx = "^0.22.0"
tox = "^4.16.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.9"
exclude = [".venv"]
venvPath = "."
venv = ".venv"
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportUnusedImport = "error"
